# udstillerguide-whiteboard

./: .env.example  .gitignore  CLAUDE.md  deploy.sh  docker-compose.yml
.beads/: config.json  issues.jsonl
.beads/issues/: wb-1.md  wb-10.md  wb-11.md  wb-12.md  wb-13.md  wb-14.md  wb-15.md  wb-16.md  wb-17.md  wb-2.md  wb-3.md  wb-4.md  wb-5.md  wb-6.md  wb-7.md  wb-8.md  wb-9.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  errors.rs  main.rs
backend/src/api/: boards.rs  errors.rs  images.rs  mod.rs  users.rs
backend/src/auth/: google.rs  middleware.rs  mod.rs
backend/src/db/: boards.rs  images.rs  mod.rs  ug_connections.rs  users.rs
backend/src/db/migrations/: 001_users.sql  002_boards.sql  003_board_collaborators.sql  004_share_links.sql  005_error_log.sql
backend/src/ug_integration/: client.rs  handlers.rs  mod.rs  sync_loop.rs  types.rs
backend/src/ws/: handler.rs  mod.rs  room.rs  sync.rs
backend/static/: board.html  index.html  package-lock.json  package.json  webawesome-entry.js
backend/static/css/: style.css
backend/static/js/: app.js  auth.js  canvas.js  error-handler.js  plugins.js  sync.js  tools.js  ui.js
backend/static/js/plugins/: ug-api.js  ug-elements.js  ug-layout.js  ug-mock-data.js  ug-panel.js  ug-plugin.js
backend/static/tests/: plugins.test.js
docs/: ug-core-api-spec.yaml
docs/plans/: 2026-02-11-ug-plugin-integration-design.md  2026-02-11-yjs-frontend-migration-design.md  2026-02-12-ug-core-integration-design.md  (+4 more)
mock-ug-server/: package.json  server.js
scripts/: errors-to-beads.sh
