[package]
name = "udstillerguide-whiteboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
anyhow = "1.0.95"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
rand = "0.8.5"
yrs = "0.21.3"
y-sync = "0.4.0"
futures-util = "0.3.31"
